<resources>
    <string name="app_name">Guest Book</string>
    <string name="title_home">Home</string>
    <string name="title_event">Event</string>
    <string name="title_export">Export</string>
    <string name="export_to_csv">Export to CSV</string>
    <string name="select_event">Select Event :</string>
    <string name="event_name">Event Name</string>
    <string name="event_description">Description</string>
    <string name="event_date">Date</string>
    <string name="add_event">Add Event</string>
    <string name="save">Save</string>
    <string name="general_validate">Please fill this box</string>
    <string name="set">Set</string>
    <string name="adding_event">Adding Event …</string>
    <string name="full_name">Full Name</string>
    <string name="guest_check_in">Guest Check In</string>
    <string name="email">Email</string>
    <string name="guest_note">Guest Note</string>
    <string name="phone_number">Phone Number</string>
    <string name="address">Address</string>
    <string name="loading">Loading …</string>
    <string name="email_validate">Please fill your email address correctly</string>
    <string name="event_location">Location</string>
    <string name="edit">Edit</string>
    <string name="search_guest">Search Guest</string>
    <string name="updating">Updating …</string>
    <string name="delete">Delete</string>
    <string name="empty_guest">There are no guests found at this event</string>
    <string name="empty_event">There is no events found</string>
    <string name="delete_event_msg">Are your sure to delete this event ? All guest data will be lost.</string>
    <string name="edit_event">Edit Event</string>
    <string name="newest_event">Newest Event</string>
    <string name="see_all">See All</string>
    <string name="showing_count">Showing total %1d guests</string>
    <string name="most_attended">Most Attended Event</string>
    <string name="search_event">Search Event</string>
    <string name="no">No</string>
    <string name="name">Name</string>
    <string name="guest_detail">Guest Detail</string>
    <string name="time_of_entry">Time Of Entry</string>
    <string name="event_deleted">Event Deleted</string>
    <string name="delete_guest">Delete this guest data ?</string>
    <string name="guest_deleted">Guest Deleted</string>
    <string name="edit_guest">Edit Guest</string>
    <string name="guest_updated">Guest Updated</string>
    <string name="event_updated">Event Updated</string>
    <string name="exporting">Exporting</string>
    <string name="fail_export_msg">Export data failed, Data not found !</string>
    <string name="permission_denied">Fail to export data, Permission denied.</string>

    <array name="example">
        <item>Example</item>
    </array>
</resources>
