<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusableInTouchMode="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbarAddGuest"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:background="@color/colorPrimary"
            android:theme="@style/AppTheme.AppBarOverlay"
            app:layout_scrollFlags="scroll|enterAlways|snap">

            <TextView
                android:id="@+id/tvTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/guest_check_in"
                android:textColor="@android:color/white"
                android:textSize="@dimen/toolbarText" />

        </androidx.appcompat.widget.Toolbar>

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/etGuestName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="20dp"
            android:textSize="14sp"
            android:inputType="text"
            android:drawableStart="@drawable/ic_person"
            android:drawablePadding="10dp"
            android:background="@android:color/white"
            android:hint="@string/full_name"
            tools:ignore="Autofill" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0.3dp"
            android:background="@color/colorMuted" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/etEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/white"
            android:padding="20dp"
            android:textSize="15sp"
            android:drawableStart="@drawable/ic_mail"
            android:drawablePadding="10dp"
            android:inputType="textEmailAddress"
            android:hint="@string/email"
            tools:ignore="Autofill" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0.3dp"
            android:background="@color/colorMuted" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/etPhone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_phone"
            android:drawablePadding="10dp"
            android:background="@android:color/white"
            android:padding="20dp"
            android:textSize="15sp"
            android:inputType="phone"
            android:hint="@string/phone_number"
            tools:ignore="Autofill" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0.3dp"
            android:background="@color/colorMuted" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/etAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_location"
            android:drawablePadding="10dp"
            android:background="@android:color/white"
            android:padding="20dp"
            android:textSize="15sp"
            android:inputType="text"
            android:hint="@string/address"
            tools:ignore="Autofill" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0.3dp"
            android:background="@color/colorMuted" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/etGuestNote"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:padding="20dp"
            android:textSize="14sp"
            android:maxLength="15"
            android:inputType="textMultiLine"
            android:maxLines="10"
            android:drawableStart="@drawable/ic_note"
            android:drawablePadding="10dp"
            android:background="@android:color/white"
            android:hint="@string/guest_note"
            tools:ignore="Autofill" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0.3dp"
            android:background="@color/colorMuted" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnSaveGuest"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:layout_marginTop="30dp"
            android:layout_gravity="center"
            android:background="@drawable/shape_button"
            android:text="@string/save"
            android:textColor="@android:color/white" />

    </LinearLayout>

</ScrollView>