<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:id="@+id/lytTitle"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/item_border"
        android:layout_marginBottom="4dp"
        android:visibility="gone"
        android:padding="10dp">

        <TextView
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:gravity="center"
            android:textColor="@android:color/black"
            android:text="@string/no" />

        <TextView
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:maxLines="1"
            android:ellipsize="end"
            android:gravity="center"
            android:textColor="@android:color/black"
            android:text="@string/name" />

        <TextView
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:maxLines="1"
            android:ellipsize="end"
            android:gravity="center"
            android:textColor="@android:color/black"
            android:text="@string/address" />

        <TextView
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:maxLines="1"
            android:ellipsize="end"
            android:gravity="center"
            android:textColor="@android:color/black"
            android:text="@string/email" />

        <TextView
            android:layout_width="110dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:maxLines="1"
            android:ellipsize="end"
            android:gravity="center"
            android:textColor="@android:color/black"
            android:text="@string/phone_number" />

        <TextView
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:maxLines="1"
            android:ellipsize="end"
            android:gravity="center"
            android:textColor="@android:color/black"
            android:text="@string/guest_note" />

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:paddingBottom="4dp">

        <TextView
            android:id="@+id/tvNumber"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:gravity="center"
            tools:text="NO" />

        <TextView
            android:id="@+id/tvGuestName"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:maxLines="1"
            android:ellipsize="end"
            tools:text="NAME" />

        <TextView
            android:id="@+id/tvGuestAddress"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:maxLines="1"
            android:ellipsize="end"
            tools:text="ADDRESS" />

        <TextView
            android:id="@+id/tvGuestEmail"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:maxLines="1"
            android:ellipsize="end"
            tools:text="EMAIL" />

        <TextView
            android:id="@+id/tvGuestPhone"
            android:layout_width="110dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:maxLines="1"
            android:ellipsize="end"
            tools:text="PHONE" />

        <TextView
            android:id="@+id/tvGuestNote"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:maxLines="1"
            android:ellipsize="end"
            tools:text="NOTE" />

    </LinearLayout>

</LinearLayout>