<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.guestdetail.GuestDetailActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbarGuest"
            android:layout_width="match_parent"
            android:layout_height="@dimen/appBar"
            android:background="@color/colorPrimary"
            android:theme="@style/AppTheme.AppBarOverlay"
            app:contentInsetLeft="16dp"
            app:titleTextAppearance="@style/Toolbar.TitleText"
            app:titleTextColor="@android:color/white"
            app:title="@string/guest_detail"/>

        <de.hdodenhof.circleimageview.CircleImageView
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginTop="30dp"
            android:layout_gravity="center"
            android:src="@drawable/ava"/>

        <TextView
            android:id="@+id/tvName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_gravity="center"
            android:textSize="18sp"
            android:textColor="@android:color/black"
            tools:text="NAME"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:padding="20dp">

            <TextView
                android:id="@+id/tv1"
                android:layout_width="115dp"
                android:layout_height="wrap_content"
                android:drawableEnd="@drawable/ic_right"
                android:text="@string/address"/>

            <TextView
                android:id="@+id/tv2"
                android:layout_width="115dp"
                android:layout_height="wrap_content"
                android:layout_below="@id/tvAddress"
                android:drawableEnd="@drawable/ic_right"
                android:text="@string/email"/>

            <TextView
                android:id="@+id/tv3"
                android:layout_width="115dp"
                android:layout_height="wrap_content"
                android:layout_below="@id/tvEmail"
                android:drawableEnd="@drawable/ic_right"
                android:text="@string/phone_number"/>

            <TextView
                android:id="@+id/tv4"
                android:layout_width="115dp"
                android:layout_height="wrap_content"
                android:layout_below="@id/tvPhone"
                android:drawableEnd="@drawable/ic_right"
                android:text="@string/guest_note"/>

            <TextView
                android:id="@+id/tv5"
                android:layout_width="115dp"
                android:layout_height="wrap_content"
                android:layout_below="@id/tvNote"
                android:drawableEnd="@drawable/ic_right"
                android:text="@string/time_of_entry"/>

            <TextView
                android:id="@+id/tvAddress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@id/tv1"
                android:layout_marginBottom="10dp"
                android:textColor="@android:color/black"
                android:text="@string/address"/>

            <TextView
                android:id="@+id/tvEmail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@id/tv2"
                android:layout_below="@id/tvAddress"
                android:layout_marginBottom="10dp"
                android:textColor="@android:color/black"
                android:text="@string/email"/>

            <TextView
                android:id="@+id/tvPhone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/tvEmail"
                android:layout_toEndOf="@id/tv3"
                android:layout_marginBottom="10dp"
                android:textColor="@android:color/black"
                android:text="@string/phone_number"/>

            <TextView
                android:id="@+id/tvNote"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/tvPhone"
                android:layout_toEndOf="@id/tv4"
                android:layout_marginBottom="10dp"
                android:textColor="@android:color/black"
                android:text="@string/guest_note"/>

            <TextView
                android:id="@+id/tvTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/tvNote"
                android:layout_toEndOf="@id/tv5"
                android:textColor="@android:color/black"
                android:text="@string/time_of_entry"/>

        </RelativeLayout>

    </LinearLayout>

</ScrollView>