<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.export.ExportFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="30dp"
        android:orientation="vertical">

        <androidx.appcompat.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="@dimen/appBar"
            android:background="@color/colorPrimary">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textSize="@dimen/toolbarText"
                android:textColor="@android:color/white"
                android:text="@string/title_export"/>

        </androidx.appcompat.widget.Toolbar>

        <TextView
            android:id="@+id/tvEvent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="16dp"
            android:textSize="16sp"
            android:textColor="@android:color/black"
            android:text="@string/select_event"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="12dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/item_border">

            <androidx.appcompat.widget.AppCompatSpinner
                android:id="@+id/spnEvent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="4dp"
                tools:entries="@array/example"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.3dp"
                android:background="@color/colorMuted"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvGuest"
                android:layout_width="match_parent"
                android:layout_height="350dp"
                android:layout_margin="1dp"
                tools:listitem="@layout/item_guest"/>

        </LinearLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:background="@drawable/shape_button"
            android:padding="10dp"
            android:layout_marginTop="18dp"
            android:layout_gravity="center"
            android:textColor="@android:color/white"
            android:text="@string/export_to_csv"/>

    </LinearLayout>

</ScrollView>