<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/appBar"
        android:background="@color/colorPrimary"
        android:theme="@style/AppTheme.AppBarOverlay"
        app:elevation="0dp">

        <androidx.appcompat.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/title_home"
                android:textColor="@android:color/white"
                android:textSize="@dimen/toolbarText" />

        </androidx.appcompat.widget.Toolbar>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/srlHome"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingBottom="50dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/newest_event"
                    android:textSize="18sp"
                    android:textColor="@android:color/black"
                    android:layout_marginTop="12dp"
                    android:layout_marginStart="16dp"/>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.3dp"
                    android:background="@color/colorMuted"
                    android:layout_marginTop="6dp"
                    android:layout_marginStart="14dp"
                    android:layout_marginEnd="14dp"/>

                <TextView
                    android:id="@+id/tvLatestEvent"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tools:text="Event Name"
                    android:textSize="16sp"
                    android:layout_marginTop="6dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"/>

                <TextView
                    android:id="@+id/tvLatestEventDate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tools:text="Event Data"
                    android:textSize="14sp"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"/>

                <androidx.recyclerview.widget.RecyclerView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/rvLatestGuest"
                    android:paddingTop="10dp"
                    android:clipToPadding="false"
                    app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior"
                    tools:listitem="@layout/item_guest"
                    tools:itemCount="5"/>

                <Button
                    android:id="@+id/btnSeeAll"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/item_background_grey"
                    android:layout_gravity="center"
                    android:padding="10dp"
                    android:textColor="@color/colorPrimary"
                    android:text="@string/see_all"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/most_attended"
                    android:textSize="18sp"
                    android:textColor="@android:color/black"
                    android:layout_marginTop="20dp"
                    android:layout_marginStart="16dp"/>

                <androidx.recyclerview.widget.RecyclerView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/rvMostAttended"
                    android:paddingTop="10dp"
                    android:clipToPadding="false"
                    android:paddingStart="4dp"
                    android:paddingEnd="4dp"
                    android:nestedScrollingEnabled="false"
                    app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    android:orientation="horizontal"
                    tools:listitem="@layout/item_event" />

            </LinearLayout>

        </androidx.core.widget.NestedScrollView>

    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>